testsuite/bsc.interra/preprocessorTestcases/ifdef/Ifdef_endifWithoutPreceedingIfdef.bsv.bsc-out.expected
checking package dependencies
Error: "Ifdef_endifWithoutPreceedingIfdef.bsv", line 34, column 1: (P0147)
  Compiler directive `endif found but no earlier matching `ifdef
